[gd_scene load_steps=10 format=3 uid="uid://ddf8ofme5gq66"]

[ext_resource type="StyleBox" uid="uid://b1bvdnbgalbwm" path="res://Ressourcen/Styles/menue_style_box_flat.tres" id="1_2hhlj"]
[ext_resource type="Script" path="res://Scene/UserInterface/meta_calcs.gd" id="1_n72al"]
[ext_resource type="StyleBox" uid="uid://cepxar0wi7s6g" path="res://Ressourcen/Styles/menue_hover_style_box_flat.tres" id="2_4okmv"]
[ext_resource type="StyleBox" uid="uid://cafjxm53n17na" path="res://Ressourcen/Styles/menue_pressed_style_box_flat.tres" id="3_6qvp8"]
[ext_resource type="PackedScene" uid="uid://ce10khqhsu0mo" path="res://Scene/UserInterface/SubScenes/modifier.tscn" id="4_kdhss"]
[ext_resource type="PackedScene" uid="uid://tvnlr676x744" path="res://Scene/UserInterface/SubScenes/move_calc_item.tscn" id="4_puudf"]
[ext_resource type="PackedScene" uid="uid://cxjnym73ccpik" path="res://Scene/UserInterface/SubScenes/ev_spin_box.tscn" id="5_3qt34"]
[ext_resource type="PackedScene" uid="uid://bm7ysubftbd38" path="res://Scene/UserInterface/SubScenes/set_selection_item.tscn" id="5_ir036"]
[ext_resource type="PackedScene" uid="uid://cueqqi8r12cud" path="res://Scene/UserInterface/SubScenes/search_option_button.tscn" id="6_8gsq0"]

[node name="MetaCalcs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n72al")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Top"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Top"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Meta Calcs"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Top"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
item_count = 1
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Regulation F"
popup/item_0/id = 0

[node name="CoreUI" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 150

[node name="Left" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Set Edit" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Species" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
fit_to_longest_item = false

[node name="Set" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
layout_mode = 2

[node name="SetSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Set"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
fit_to_longest_item = false

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Set"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
text = " Save "

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Set"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Tera" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Tera"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tera Type:  "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Tera"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
alignment = 1
item_count = 19
popup/item_0/text = "Bug"
popup/item_0/id = 0
popup/item_1/text = "Dark"
popup/item_1/id = 1
popup/item_2/text = "Dragon"
popup/item_2/id = 2
popup/item_3/text = "Electric"
popup/item_3/id = 3
popup/item_4/text = "Fairy"
popup/item_4/id = 4
popup/item_5/text = "Fighting"
popup/item_5/id = 5
popup/item_6/text = "Fire"
popup/item_6/id = 6
popup/item_7/text = "Flying"
popup/item_7/id = 7
popup/item_8/text = "Ghost"
popup/item_8/id = 8
popup/item_9/text = "Grass"
popup/item_9/id = 9
popup/item_10/text = "Ground"
popup/item_10/id = 10
popup/item_11/text = "Ice"
popup/item_11/id = 11
popup/item_12/text = "Normal"
popup/item_12/id = 12
popup/item_13/text = "Poison"
popup/item_13/id = 13
popup/item_14/text = "Psychic"
popup/item_14/id = 14
popup/item_15/text = "Rock"
popup/item_15/id = 15
popup/item_16/text = "Steel"
popup/item_16/id = 16
popup/item_17/text = "Water"
popup/item_17/id = 17
popup/item_18/text = "Stellar"
popup/item_18/id = 18
metadata/_edit_group_ = true

[node name="Stats" type="GridContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
layout_mode = 2
columns = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "IVs"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "EVs"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "HP"

[node name="HpIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="HpEv" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats" instance=ExtResource("5_3qt34")]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ATK"

[node name="AtkIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="AtkEv" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats" instance=ExtResource("5_3qt34")]
layout_mode = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "DEF"

[node name="DefIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="DefEv" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats" instance=ExtResource("5_3qt34")]
layout_mode = 2

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SPA"

[node name="SpaIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="SpaEv" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats" instance=ExtResource("5_3qt34")]
layout_mode = 2

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SPD"

[node name="SpdIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="SpdEv" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats" instance=ExtResource("5_3qt34")]
layout_mode = 2

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SPE"

[node name="SpeIv" type="SpinBox" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats"]
layout_mode = 2
max_value = 31.0
value = 31.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="SpeEv" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Stats" instance=ExtResource("5_3qt34")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nature"

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 5
selected = 0
popup/item_0/text = "+ ATK"
popup/item_0/id = 0
popup/item_1/text = "+ DEF"
popup/item_1/id = 1
popup/item_2/text = "+ SPA"
popup/item_2/id = 2
popup/item_3/text = "+ SPD"
popup/item_3/id = 3
popup/item_4/text = "+ SPE"
popup/item_4/id = 4

[node name="OptionButton4" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 5
selected = 2
popup/item_0/text = "- ATK"
popup/item_0/id = 0
popup/item_1/text = "- DEF"
popup/item_1/id = 1
popup/item_2/text = "- SPA"
popup/item_2/id = 2
popup/item_3/text = "- SPD"
popup/item_3/id = 3
popup/item_4/text = "- SPE"
popup/item_4/id = 4

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ability: "

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 1
popup/item_0/text = "Water Absorb"
popup/item_0/id = 0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Item: "

[node name="OptionButton3" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/GridContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 1
popup/item_0/text = "Wellspring Mask"
popup/item_0/id = 0

[node name="Moves" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Moves"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Moves"

[node name="Control" parent="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Moves" instance=ExtResource("6_8gsq0")]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Left"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Extras" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left"]
layout_mode = 2

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Left/Extras"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
text = "Terastalize"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Left"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Factors" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
text = "Add Modifier"

[node name="Modifier Type" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 7
popup/item_0/text = "Weather"
popup/item_0/id = 0
popup/item_1/text = "Terrain"
popup/item_1/id = 1
popup/item_2/text = "Ruin Ability"
popup/item_2/id = 2
popup/item_3/text = "Helping Hand"
popup/item_3/id = 3
popup/item_4/text = "Stat Boosts"
popup/item_4/id = 4
popup/item_5/text = "Screens"
popup/item_5/id = 5
popup/item_6/text = "Friend Guard"
popup/item_6/id = 6

[node name="Weather Select" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 4
popup/item_0/text = "Sun"
popup/item_0/id = 0
popup/item_1/text = "Rain"
popup/item_1/id = 1
popup/item_2/text = "Snow"
popup/item_2/id = 2
popup/item_3/text = "Sand"
popup/item_3/id = 3

[node name="Terrain Select" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 4
popup/item_0/text = "Grassy"
popup/item_0/id = 0
popup/item_1/text = "Electric"
popup/item_1/id = 1
popup/item_2/text = "Psychic"
popup/item_2/id = 2
popup/item_3/text = "Misty"
popup/item_3/id = 3

[node name="Ruin Select" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 4
popup/item_0/text = "Sword"
popup/item_0/id = 0
popup/item_1/text = "Beads"
popup/item_1/id = 1
popup/item_2/text = "Vessel"
popup/item_2/id = 2
popup/item_3/text = "Tablets"
popup/item_3/id = 3

[node name="Stat Select" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 4
popup/item_0/text = "ATK"
popup/item_0/id = 0
popup/item_1/text = "DEF"
popup/item_1/id = 1
popup/item_2/text = "SPA"
popup/item_2/id = 2
popup/item_3/text = "SPD"
popup/item_3/id = 3

[node name="Stat Strength Select" type="OptionButton" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
item_count = 12
popup/item_0/text = "+6"
popup/item_0/id = 0
popup/item_1/text = "+5"
popup/item_1/id = 1
popup/item_2/text = "+4"
popup/item_2/id = 2
popup/item_3/text = "+3"
popup/item_3/id = 3
popup/item_4/text = "+2"
popup/item_4/id = 4
popup/item_5/text = "+1"
popup/item_5/id = 5
popup/item_6/text = "-1"
popup/item_6/id = 6
popup/item_7/text = "-2"
popup/item_7/id = 7
popup/item_8/text = "-3"
popup/item_8/id = 8
popup/item_9/text = "-4"
popup/item_9/id = 9
popup/item_10/text = "-5"
popup/item_10/id = 10
popup/item_11/text = "-6"
popup/item_11/id = 11

[node name="Target Button" type="Button" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
text = "Self"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors"]
layout_mode = 2

[node name="Modifier" parent="MarginContainer/VBoxContainer/CoreUI/Left/Factors/GridContainer" instance=ExtResource("4_kdhss")]
layout_mode = 2

[node name="Middle" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/CoreUI/Middle"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MiddleScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Middle/MiddleScroll"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" parent="MarginContainer/VBoxContainer/CoreUI/Middle/MiddleScroll/VBoxContainer" instance=ExtResource("4_puudf")]
layout_mode = 2

[node name="Right" type="ScrollContainer" parent="MarginContainer/VBoxContainer/CoreUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CoreUI/Right"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" parent="MarginContainer/VBoxContainer/CoreUI/Right/VBoxContainer" instance=ExtResource("5_ir036")]
layout_mode = 2

[node name="Bottom" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
text = "Go Back"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Bottom"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/Bottom"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_2hhlj")
theme_override_styles/hover = ExtResource("2_4okmv")
theme_override_styles/pressed = ExtResource("3_6qvp8")
text = "Continue"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/CoreUI/Left/Set Edit/Species" to="." method="_on_species_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bottom/Back" to="." method="_on_back_pressed"]
